Added basic logic. Waiting for the getPassword and getGroups routes

--- a/package.json
+++ b/package.json
@@ -4,6 +4,10 @@
   "description": "",
   "main": "index.js",
   "dependencies": {
+    "express": "^4.17.1",
+    "http": "0.0.1-security",
+    "jsonwebtoken": "^8.5.1",
+    "mssql": "^6.2.3",
     "node": "^14.13.0"
   },
   "devDependencies": {},
