--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "express": "^4.17.1",
     "http": "0.0.1-security",
     "jsonwebtoken": "^8.5.1",
+    "lodash": "^4.17.20",
     "mssql": "^6.2.3",
     "node": "^14.13.0",
     "nodemon": "^2.0.4",
