--- a/BL/config.json
+++ b/BL/config.json
@@ -2,7 +2,8 @@
     "development": {
         "config_id": "development",
         "node_port": 3000,
-        "getUserURL": "http://10.1.0.27:3000/Users/"
+        "getUserURL": "http://10.1.0.27:3000/Users/",
+        "requestTimeout": 2000
     },
     "production": {
         "config_id": "production",
