--- a/BL/config.json
+++ b/BL/config.json
@@ -3,11 +3,14 @@
         "config_id": "development",
         "node_port": 3000,
         "getUserURL": "http://10.1.0.27:3000/Users/",
+        "getGroupsURL": "http://10.1.0.19:3000/Groups/",
         "requestTimeout": 2000
     },
     "production": {
         "config_id": "production",
         "node_port": 8080,
-        "getUserURL": "http://10.1.0.27:3000/Users/"
+        "getUserURL": "http://10.1.0.27:3000/Users/",
+        "getGroupsURL": "http://10.1.0.19:3000/Groups/",
+        "requestTimeout": 2000
     }
 }
