Moved the secret key to the config.json

--- a/BL/config.json
+++ b/BL/config.json
@@ -4,13 +4,15 @@
         "node_port": 3000,
         "getUserURL": "http://10.1.0.27:3000/Users/",
         "getGroupsURL": "http://10.1.0.19:3000/Groups/",
-        "requestTimeout": 2000
+        "requestTimeout": 2000,
+        "secretKey": "#$BenGay"
     },
     "production": {
         "config_id": "production",
         "node_port": 8080,
         "getUserURL": "http://10.1.0.27:3000/Users/",
         "getGroupsURL": "http://10.1.0.19:3000/Groups/",
-        "requestTimeout": 2000
+        "requestTimeout": 2000,
+        "secretKey": "#$BenGay"
     }
 }
