--- a/config/config.json
+++ b/config/config.json
@@ -3,7 +3,7 @@
         "config_id": "development",
         "node_port": 3000,
         "getUserURL": "http://10.1.0.27:3000/Users/ByName/",
-        "getGroupsURL": "http://10.1.0.19:3000/Groups/",
+        "getGroupsURL": "http://10.1.0.19:3000/Groups/GroupByUsername/",
         "requestTimeout": 2000,
         "secretKey": "#$BenGay"
     },
@@ -11,7 +11,7 @@
         "config_id": "production",
         "node_port": 8080,
         "getUserURL": "http://10.1.0.27:3000/Users/ByName/",
-        "getGroupsURL": "http://10.1.0.19:3000/Groups/",
+        "getGroupsURL": "http://10.1.0.19:3000/Groups/GroupByUsername/",
         "requestTimeout": 2000,
         "secretKey": "#$BenGay"
     }
