Removed request to the Users service - instead getting the data from the DB

--- a/config/config.json
+++ b/config/config.json
@@ -3,14 +3,18 @@
         "config_id": "development",
         "node_port": 3000,
         "getUserURL": "http://10.1.0.27:3000/Users/ByName/",
+        "getGroupsURL": "http://10.1.0.19:3000/Groups/GroupByUsername/",
         "requestTimeout": 2000,
-        "secretKey": "#$BenGay"
+        "secretKey": "#$BenGay",
+        "roles": ["admin", ""]
     },
     "production": {
         "config_id": "production",
         "node_port": 8080,
         "getUserURL": "http://10.1.0.27:3000/Users/ByName/",
+        "getGroupsURL": "http://10.1.0.19:3000/Groups/GroupByUsername/",
         "requestTimeout": 2000,
-        "secretKey": "#$BenGay"
+        "secretKey": "#$BenGay",
+        "roles": ["admin", ""]
     }
 }
