--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "dependencies": {
     "axios": "^0.20.0",
+    "commonframework": "git+https://github.com/Feldmanager/CommonFramework.git#dev",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "http": "0.0.1-security",
