--- a/config/config.json
+++ b/config/config.json
@@ -4,7 +4,7 @@
         "node_port": 3000,
         "requestTimeout": 2000,
         "secretKey": "#$BenGay",
-        "allowedOrigins": ["http://localhost:3001", "http://10.1.0.27:3001", "http://10.1.0.26:3001", "http://10.1.0.19:3001", "http://10.1.0.14:3001", "http://10.1.0.11:3001"],
+        "allowedOrigins": ["http://10.1.0.119:3000", "http://10.1.0.17:3001", "http://10.1.0.27:3001", "http://10.1.0.26:3001", "http://10.1.0.19:3001", "http://10.1.0.14:3001", "http://10.1.0.11:3001"],
         "authorizationMapping": {
             "Admin": {
                 "מגרשים": {
@@ -61,7 +61,7 @@
         "node_port": 8080,
         "requestTimeout": 2000,
         "secretKey": "#$BenGay",
-        "allowedOrigins": ["http://10.1.0.119:3000"],
+        "allowedOrigins": ["http://10.1.0.119:80", "http://10.1.0.119:443"],
         "authorizationMapping": {
             "Admin": {
                 "מגרשים": {
