--- a/config/config.json
+++ b/config/config.json
@@ -6,10 +6,7 @@
         "secretKey": "#$BenGay",
         "allowedOrigins": ["http://10.1.0.119:3000", "http://localhost:3001", "http://10.1.0.17:3001", "http://10.1.0.27:3001", "http://10.1.0.26:3001", "http://10.1.0.19:3001", "http://10.1.0.14:3001", "http://10.1.0.11:3001"],
         "authorizationMapping": {
-            "Admin": {
-                "מגרשים": {
-                    "isEnabled": true
-                },
+            "Admin": { 
                 "פתיחת תקלה": {
                     "isEnabled": true
                 },
@@ -17,14 +14,11 @@
                     "isEnabled": true,
                     "isEditEnabled": true
                 },
-                "יצירת משתמש": {
+                "ניהול": {
                     "isEnabled": true
                 }
             },
             "Makas": {
-                "מגרשים": {
-                    "isEnabled": true
-                },
                 "פתיחת תקלה": {
                     "isEnabled": true
                 },
@@ -32,14 +26,11 @@
                     "isEnabled": true,
                     "isEditEnabled": true
                 },
-                "יצירת משתמש": {
+                "ניהול": {
                     "isEnabled": true
                 }
             },
             "Staff": {
-                "מגרשים": {
-                    "isEnabled": true
-                },
                 "פתיחת תקלה": {
                     "isEnabled": true
                 },
@@ -64,9 +55,6 @@
         "allowedOrigins": ["http://10.1.0.119:80", "http://10.1.0.119:443"],
         "authorizationMapping": {
             "Admin": {
-                "מגרשים": {
-                    "isEnabled": true
-                },
                 "פתיחת תקלה": {
                     "isEnabled": true
                 },
@@ -74,14 +62,11 @@
                     "isEnabled": true,
                     "isEditEnabled": true
                 },
-                "יצירת משתמש": {
+                "ניהול": {
                     "isEnabled": true
                 }
             },
             "Makas": {
-                "מגרשים": {
-                    "isEnabled": true
-                },
                 "פתיחת תקלה": {
                     "isEnabled": true
                 },
@@ -89,14 +74,11 @@
                     "isEnabled": true,
                     "isEditEnabled": true
                 },
-                "יצירת משתמש": {
+                "ניהול": {
                     "isEnabled": true
                 }
             },
             "Staff": {
-                "מגרשים": {
-                    "isEnabled": true
-                },
                 "פתיחת תקלה": {
                     "isEnabled": true
                 },
